# camplayer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh  nginx.conf
.github/: copilot-instructions.md
.github/workflows/: build-os-image.yml  build-tauri.yml  ci.yml
boot/: README.txt
camplayer/: backgroundgen.py  camplayer.py  windowmanager.py
camplayer/utils/: constants.py  globals.py  mpvipc.py  utils.py
config/: go2rtc.yaml
docs/legacy/: README-pre-v2.md
os/: README.md  build.sh  shrink-image.sh
os/stage-camplayer/: 00-packages
systemhelper/: README.md  __main__.py  api_server.py  app.py  camplayer-systemhelper.service  cec_control.py  requirements.txt
systemhelper/config/: ini_manager.py  system_config.py  validator.py
systemhelper/discovery/: hikvision.py  onvif_probe.py  reolink.py  result.py  scanner.py
systemhelper/screens/: about.py  camera_manager.py  cec.py  dashboard.py  layout_editor.py  network.py  speedtest.py  system.py
systemhelper/widgets/: camera_row.py  confirm_dialog.py  layout_thumb.py  spinner.py  stream_preview.py
tauri-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-app/src/: App.tsx  index.css
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: README.md  icon.icns
tauri-app/src-tauri/src/: lib.rs  main.rs  models.rs
tauri-app/src-tauri/src/commands/: discovery.rs  mod.rs  server.rs  shortcuts.rs
web/backend/: Dockerfile  config_parser.py  (+4 more)
(+52 files in other folders)
