[package]
name = "camplayer"
version = "2.0.0"
edition = "2021"

[lib]
name = "camplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "camplayer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
